internal/testdata/nginxphp/autogen-templates/ingress-3/nginx-php.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    fastly.amazee.io/watch: "false"
    idling.amazee.io/disable-request-verification: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    lagoon.sh/prBaseBranch: main2
    lagoon.sh/prHeadBranch: main
    lagoon.sh/prNumber: "123"
    lagoon.sh/version: v2.7.x
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Robots-Tag "noindex, nofollow";
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/instance: nginx-php
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: autogenerated-ingress
    lagoon.sh/autogenerated: "true"
    lagoon.sh/buildType: pullrequest
    lagoon.sh/environment: pr-123
    lagoon.sh/environmentType: development
    lagoon.sh/project: content-abcdefghijk-net-com-co
    lagoon.sh/service: nginx-php
    lagoon.sh/service-type: nginx-php
    lagoon.sh/template: autogenerated-ingress-0.1.0
    route.lagoon.sh/source: autogenerated
  name: nginx-php
spec:
  rules:
  - host: nginx-php.pr-123.content-abcdefghijk-net-com-co.abc1.abc.net.com.co
    http:
      paths:
      - backend:
          service:
            name: nginx-php
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx-php.4acfiibx.xjtthosc.abc1.abc.net.com.co
    - nginx-php.pr-123.content-abcdefghijk-net-com-co.abc1.abc.net.com.co
    secretName: nginx-php-tls
status:
  loadBalancer: {}
